--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -110,6 +110,11 @@ h2 {
     justify-content: center;
 }
 
+.search-icon {
+    color: rgb(228, 228, 228);
+    margin-right: 2px;
+}
+
 .loader {
     position: absolute;
     left: 50%;
@@ -123,6 +128,9 @@ h2 {
     border: rgb(87, 87, 87) solid 1px;
     color: white;
     border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 38px;
     margin-bottom: 10px;
     margin-top: 20px;
