--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -121,7 +121,7 @@ h2 {
     justify-content: center;
 }
 
-.search-icon {
+.refresh-icon {
     color: rgb(228, 228, 228);
     margin-right: 2px;
 }
