--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -49,6 +49,7 @@ h2 {
     border: rgb(87, 87, 87) solid 1px;
     color: white;
     border: none;
+    padding-left: 6px;
     height: 40px;
     font-size: 16px;
     margin-right: 5px;
@@ -74,6 +75,7 @@ h2 {
 .available-checkbox-container > h5 {
     color: white;
     margin-left: 5px;
+    cursor: pointer;
     font-weight: 400;
 }
 
