--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -81,6 +81,7 @@ h2 {
 
 .district-select {
     width: 50%;
+    cursor: pointer;
     border-radius: 5px;
     background-color: rgba(0, 0, 0, 0.26);
     border: rgb(87, 87, 87) solid 1px;
@@ -121,6 +122,10 @@ h2 {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.date-picker {
+    cursor: pointer;
 }
 
 .refresh-icon {
