--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -180,3 +180,48 @@ h2 {
     background-color: rgba(167, 250, 0, 0.267);
     border: 1px solid rgb(0, 250, 0);
 }
+
+.fee-type-filter {
+    display: flex;
+    margin-top: 6px;
+    cursor: pointer;
+    margin-left: 10px;
+}
+
+.fee-type-option1 {
+    box-shadow: 0px 0px 20px rgb(0, 0, 0);
+    border: rgb(126, 126, 126) solid 1px;
+    width: 50px;
+    outline: none;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    padding: 3px;
+    font-size: 15px;
+    background-color: rgb(26, 26, 26);
+    color: rgb(233, 233, 233);
+}
+
+.fee-type-option2 {
+    border-right: white;
+    width: 50px;
+    padding: 3px;
+    font-size: 15px;
+    outline: none;
+    box-shadow: 0px 0px 20px rgb(0, 0, 0);
+    border: rgb(126, 126, 126) solid 1px;
+    background-color: black;
+    color: rgb(233, 233, 233);
+}
+
+.fee-type-option3 {
+    padding: 3px;
+    font-size: 15px;
+    width: 50px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    outline: none;
+    box-shadow: 0px 0px 20px rgb(0, 0, 0);
+    border: rgb(126, 126, 126) solid 1px;
+    background-color: black;
+    color: rgb(233, 233, 233);
+}
